# warehouse

./: .env.template  .gitignore  .pylinrc  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup_backup.sh
app/accounts/: admin.py  models.py  signals.py  urls.py  views.py
app/accounts/migrations/: 0001_initial.py  0004_delete_approval_delete_worker_profile_gender.py  0005_alter_profile_options.py  0006_remove_profile_bio.py  0007_event.py
app/app/: settings.py  urls.py
app/bound/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
app/bound/migrations/: 0001_initial.py  0002_remove_inbound_documents_url_and_more.py  0003_alter_inbound_created_by.py  0004_alter_inbound_status.py
app/staff/: forms.py  urls.py  views.py
app/static_debug/css/: style.css
app/static_debug/js/: inb_files.js  inb_form_validation.js  notification.js
app/structure/: forms.py  urls.py  views.py
app/templates/: base.html
app/templates/account/: email_confirm.html  login.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key_done.html  signup.html  verification_sent.html
app/uploads/: INB-FORM.xlsx
app/warehouse/: admin.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
app/wave/: models.py
app/wave/migrations/: 0001_initial.py
db_schemes/1/: db_scheme.excalidraw
db_schemes/2/: permissions.excalidraw
schemes/db/: db_4.0.excalidraw  db_backup.excalidraw
schemes/logic/: outbound_way.excalidraw
schemes/permissions/: permissions_4.0.excalidraw
vhost.d/: rod-project.fun
(+48 files in other folders)
