[project]
name = "diplom"
version = "0.1.0"
description = ""
authors = [
    {name = "aleksei_rodimkin",email = "alexeyrodimkin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "psycopg (>=3.2.12,<4.0.0)",
    "django-widget-tweaks (>=1.5.0,<2.0.0)",
    "django-allauth (>=65.13.1,<66.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^4.0.2"
black = "^25.9.0"
isort = "^7.0.0"

