[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "aleksei_rodimkin",email = "alexeyrodimkin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "psycopg[binary] (>=3.2.12,<4.0.0)",
    "django-widget-tweaks (>=1.5.0,<2.0.0)",
    "django-allauth (>=65.13.1,<66.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "reportlab (>=4.4.6,<5.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

